Fix footer horizontal scroll

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -10,11 +10,11 @@
     -webkit-box-shadow: 0px -10px 6px 5px $wht; 
     box-shadow: 0px -7px 10px 5px $wht;
     background-color: $blk;
-    position: fixed;
-    padding: 8px 8px 4px 8px;
+    position: absolute;
+    // padding: 8px 8px 4px 8px;
     bottom: 0;
     color: $wht;
-    width: 100%;
+    width: 100vw;
     font-size: 14px;
 
     .main-footer-content {
@@ -22,7 +22,7 @@
         display: flex;
         justify-content: space-evenly;
         max-width: 700px;
-        padding: 10px;
+        padding: 12px;
     }
 
     p {
